syntax = "proto3";

// protoc --go_out=plugins=grpc:. *.proto

package protoAuth;

//option go_package = "github.com/go-park-mail-ru/2020_2_ExtraSafe/services/proto";
import "profile/profile.proto";

message UserSession {
  string SessionID = 1;
  int64 UserID = 2;
}

message Nothing {
  bool dummy = 1;
}

service Auth {
  rpc Auth (protoProfile.UserID) returns (protoProfile.UserBoardsOutside) {}
  rpc Login (protoProfile.UserInputLogin) returns (UserSession) {}
  rpc Registration (protoProfile.UserInputReg) returns (UserSession) {}
  rpc CheckCookie (UserSession) returns (protoProfile.UserID) {}
  rpc DeleteCookie (UserSession) returns (Nothing) {}
}